# fftw_module

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  fftw-module.sln  plans.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cxx_module/: CMakeLists.txt  fftw_module.cppm
fftw-module/: fftw-module.vcxproj  fftw-module.vcxproj.filters  fftw_data_support.ixx  fftw_module.cppm  fftw_module.h  fftw_module.ixx  fftw_plan.h  fftw_plan.ixx  fftw_vector.h  fftw_vector.ixx  vcpkg-configuration.json  vcpkg.json
include/fftw_module/: fftw_data_support.h  fftw_plan.h  fftw_vector.h
test/: fftw_mock.cpp  fftw_mock_class.h  fftw_tests.cpp  fftwf_mock.cpp  fftwf_mock_class.h  fftwf_test.cpp  fftwl_mock.cpp  fftwl_mock_class.h  fftwl_tests.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  vcpkg.json
tests/: CMakeLists.txt  fftw_mock.cpp  fftw_mock_class.h  fftw_tests.cpp  fftwf_mock.cpp  fftwf_mock_class.h  fftwf_test.cpp  fftwl_mock.cpp  fftwl_mock_class.h  fftwl_tests.cpp  test_main.cpp
